# swarm_ws

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  compose.benchmark.yaml  compose.record.yaml  compose.yaml  frames_2026-03-13_22.21.00.gv  generate_maze.py  maze.txt  maze_world.sdf  package-lock.json  package.json  robot_world.sdf
.claude/: settings.local.json
.devcontainer/: Dockerfile.dev  devcontainer.json
benchmark_results/: summary.txt
config/foxglove/: swarm_ws.json
install/: local_setup.sh  setup.sh
log/: latest_build  latest_version-check
scripts/: bag_recorder.py  benchmark_cli.py  measure_exploration.py  replay_bag.sh
src/swarm_bringup/: package.xml  setup.py
src/swarm_bringup/config/: nav2_params.yaml  slam_params.yaml
src/swarm_bringup/launch/: gazebo.launch.py  global.launch.py  map_merge.launch.py  navigation.launch.py  robot_stack.launch.py  swarm.launch.py
src/swarm_bringup/worlds/: generate_maze.py  maze.txt  maze_world.sdf
src/swarm_exploration/: package.xml  setup.cfg  setup.py
src/swarm_exploration/launch/: single_robot.launch.py
src/swarm_exploration/swarm_exploration/: coordinator_node.py  frontier_detector_node.py  robot_fsm_node.py
src/swarm_exploration/urdf/: gz_waffle.sdf.xacro
src/swarm_exploration/worlds/: robot_world.sdf
src/swarm_msgs/: CMakeLists.txt  package.xml
src/swarm_msgs/msg/: Frontier.msg  FrontierArray.msg  RobotStatus.msg
src/swarm_slam/: package.xml  setup.cfg  setup.py
src/swarm_slam/swarm_slam/: global_node.py  (+1 more)
(+8 files in other folders)
